new kiosk setup